v/syntaxError/cmudsp.d/alu.rtl/test/ymem.mem
zzzzzz
zzzzzz
zzzzzz	//  move #$0,r0
zzzzzz	//  move #$3,m0
zzzzzz	//  move #$0,r4
zzzzzz	//  move #$3,m4
zzzzzz	//  move #>$100,r1
zzzzzz	//  move #>$100,r1 (cont)
zzzzzz	//  move #>$300,r5
zzzzzz	//  move #>$300,r5 (cont)
zzzzzz	//  do #<$100,$110 ; p:endp
zzzzzz	//  do #<$100,$110 ; p:endp (cont)
d7de05	//  move y:(r1)+,x0 ; y:datin
0ccccd	//  clr a x0,x:(r0)+ y:(r4)+,y0 ; x:states y:coef
zzzzzz	//  rep #<$3
266666	//  mac y0,x0,a x:(r0)+,x0 y:(r4)+,y0 ; x:(states+1) y:(coef+1)
f33333	//  mac y0,x0,a x:(r0)+,x0 y:(r4)+,y0 ; x:(states+2) y:(coef+2)
19999a	//  mac y0,x0,a x:(r0)+,x0 y:(r4)+,y0 ; x:(states+3) y:(coef+3)
zzzzzz	//  macr y0,x0,a (r0)-
zzzzzz	//  move a,y:(r5)+ ; y:datout
0bfbc6	//  move y:(r1)+,x0 ; y:(datin+1)
0ccccd	//  clr a x0,x:(r0)+ y:(r4)+,y0 ; x:(states+3) y:coef
zzzzzz	//  rep #<$3
266666	//  mac y0,x0,a x:(r0)+,x0 y:(r4)+,y0 ; x:states y:(coef+1)
f33333	//  mac y0,x0,a x:(r0)+,x0 y:(r4)+,y0 ; x:(states+1) y:(coef+2)
19999a	//  mac y0,x0,a x:(r0)+,x0 y:(r4)+,y0 ; x:(states+2) y:(coef+3)
zzzzzz	//  macr y0,x0,a (r0)-
zzzzzz	//  move a,y:(r5)+ ; y:(datout+1)
2d1c97	//  move y:(r1)+,x0 ; y:(datin+2)
0ccccd	//  clr a x0,x:(r0)+ y:(r4)+,y0 ; x:(states+2) y:coef
zzzzzz	//  rep #<$3
266666	//  mac y0,x0,a x:(r0)+,x0 y:(r4)+,y0 ; x:(states+3) y:(coef+1)
f33333	//  mac y0,x0,a x:(r0)+,x0 y:(r4)+,y0 ; x:states y:(coef+2)
19999a	//  mac y0,x0,a x:(r0)+,x0 y:(r4)+,y0 ; x:(states+1) y:(coef+3)
zzzzzz	//  macr y0,x0,a (r0)-
zzzzzz	//  move a,y:(r5)+ ; y:(datout+2)
09c769	//  move y:(r1)+,x0 ; y:(datin+3)
0ccccd	//  clr a x0,x:(r0)+ y:(r4)+,y0 ; x:(states+1) y:coef
zzzzzz	//  rep #<$3
266666	//  mac y0,x0,a x:(r0)+,x0 y:(r4)+,y0 ; x:(states+2) y:(coef+1)
